Adding more information to the README